--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@
 *2.HEADER
 *3.FORM
 *4.COLUMNS
-*5.FOOTER
+*5.BUTTON
+*56.FOOTER
 */
 
 /*1.BOX-SIZING, HIDDEN CLASS, PAGE-WRAPPER*/
@@ -73,10 +74,17 @@ header{
     text-align: center;
 }
 
-/*5.FOOTER*/
+/*5.BUTTON*/
+#clear{
+    float: right;
+    margin: 1.25rem 2.5% 1.25rem 0;
+}
+
+/*6.FOOTER*/
 footer{
     width: 100%;
     height: 100px;
     border: 1px dashed white;
+    clear: both;
 }
 
