some styling completed

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 /*FONT IMPORTS*/
+@import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Pacifico|Wendy+One');
 
 /*TABLE OF CONTENTS
 ====================
@@ -8,18 +9,17 @@
 *2.HEADER
 *3.FORM
 *4.COLUMNS
-*5.BUTTON
-*56.FOOTER
+*5.BUTTONS
+*6.FOOTER
+*7.MEDIA QUERIES
 */
 
 /*1.BOX-SIZING, HIDDEN CLASS, PAGE-WRAPPER*/
 
-
-
-
 html {
   box-sizing: border-box;
   font-size: 16px;
+  background-color: #48AAFF;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -35,9 +35,7 @@ html {
 
 #page-wrapper{
     max-width: 1200px;
-    min-height: 100vh;
     margin: 0 auto;
-    background: pink;
 }
 
 /*2.HEADER*/
@@ -47,6 +45,13 @@ header{
     border: 1px dashed white;
 }
 
+h1{
+   font-family: 'Pacifico', cursive;
+   color: #fff;
+   margin-left: 1.25rem;
+
+}
+
 /*3.FORM*/
 
 #form-container{
@@ -54,10 +59,15 @@ header{
     margin: 1.25rem auto;
 }
 
+input[type=text]{
+    border: 1px solid #fff;
+    border-radius: 5px;
+    padding:  0.5rem 1rem;
+}
+
 /*4.COLUMNS*/
 #column-container{
     width: 100%;
-    height: 500px;
     display: flex;
     justify-content: space-between;
     padding: 0 2.5%;
@@ -66,25 +76,81 @@ header{
 
 .column{
     width: 30%;
-    height: 100%;
-    border: 1px dashed green;
+    height: 400px;
+    border: 2px solid #fff;
+    border-radius: 2.5px;
+    overflow: auto;
 }
 
 .column_heading{
     text-align: center;
+    color: #fff;
+    font-family: 'Pacifico', cursive;
 }
 
-/*5.BUTTON*/
+/*5.BUTTONS*/
 #clear{
     float: right;
     margin: 1.25rem 2.5% 1.25rem 0;
 }
 
+input[type=submit], .ul_todo_button, .ul_doing_button, #clear {
+    background-color: #48AAFF;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    color: #fff;
+    padding:  0.5rem 1rem;
+    font-weight: bold;
+}
+
+input[type=submit]:hover, .ul_todo_button:hover, .ul_doing_button:hover, #clear:hover{
+    cursor: pointer;
+}
+
+.ul_todo_button, .ul_doing_button{
+    margin-left: 1.25rem;
+}
+
 /*6.FOOTER*/
 footer{
     width: 100%;
-    height: 100px;
+    height: 50px;
     border: 1px dashed white;
     clear: both;
 }
 
+#footer-copyright{
+    text-align: center;
+    margin-top: 1.25rem;
+}
+
+/*7.MEDIA QUERIES*/
+
+/*768px*/
+@media all and (max-width: 768px) {
+    
+    #column-container{
+        padding: 0;
+    }
+    
+}
+
+/*680px*/
+@media all and (max-width: 680px) {
+    #column-container{
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    
+    .column{
+        width: 80%;
+        margin: 0 auto;
+    }
+}
+
+/*480px*/
+@media all and (max-width: 480px) {
+    .column{
+        width: 100%;
+    }
+}
