--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ h1{
 /*3.FORM*/
 
 #form-container{
-    width: 30%;
+    width: 300px;
     margin: 1.25rem auto;
 }
 
@@ -65,6 +65,12 @@ input[type=text]{
     padding:  0.5rem 1rem;
 }
 
+.error{
+    color: #C23628;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 1.25rem;
+}
 /*4.COLUMNS*/
 #column-container{
     width: 100%;
@@ -95,6 +101,7 @@ li{
 
 .checked_off{
     text-decoration: line-through;
+    color: #A3ADC2;
 }
 
 .checked_off button{
@@ -127,13 +134,15 @@ input[type=submit]:hover, .ul_todo_button:hover, .ul_doing_button:hover, #clear:
 footer{
     width: 100%;
     height: 50px;
-    border: 1px dashed white;
+    border-top: 1px solid #fff;
     clear: both;
 }
 
 #footer-copyright{
     text-align: center;
     margin-top: 1.25rem;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /*7.MEDIA QUERIES*/
